<resources>
    <string name="app_name">Justificante Emulsa</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_type"> Tipo y Marca </string>
    <string name="state_text"> Estado del residuo a depositar</string>
    <string name="type_text"> Tipo del residuo a depositar </string>
    <string name="item_number"> Número de Serie (Si es posible) </string>
    <string name="next"> Siguiente </string>
    <string name="user_data_text"> Datos del Ciudadano </string>
    <string name="user_name"> Nombre y Apellidos </string>
    <string name="user_nif"> N.I.F</string>
    <string name="user_phone_number"> Nº de Teléfono </string>
    <string name="user_email"> Email </string>
    <string name="final_button"> Finalizar </string>
    <string name="item_failure_description"> Describir avería </string>
    <string name="confirm_dialog_title">"¿ Son los datos correctos? "</string>
    <string name="yes">Si</string>
    <string name="cancel">Cancelar</string>
    <string name="confirm">Confirmar</string>
    <string name="confirm_itemType">"Tipo de residuo: "</string>
    <string name="confirmItemBrando">"Tipo y Marca: "</string>
    <string name="confirm_item_ns">"Número de Serie: "</string>
    <string name="confirm_item_state">"Estado: "</string>
    <string name="confirmDescription">"Descripción Avería: "</string>
    <string name="confirm_name">"Nombre: "</string>
    <string name="confirm_nif">"NIF: "</string>
    <string name="confirm_phone">"Nº Teléfono: "</string>
    <string name="confirm_email">"Email: "</string>
    <string name="user_sign_text">Firma del Donante:</string>
    <string name="worker_sign_text">Firma del Receptor:</string>
    <string name="menu_open_folder"> Abrir Directorio</string>
    <string name="error_string"> Debes rellenar este campo </string>
    <string name="card_title">IMPORTANTE</string>
    <string name="no_file_explorer_installed">No tienes ninguna aplicacion instalada que pueda realizar esta accion. Aplicación Recomendad: Cx Explorador de Archivos</string>
    <string name="pdf_title">JUSTIFICANTE DEPÓSITO PARA LA REUTILIZACIÓN</string>
    <string name="install_explorer">Instalar</string>
    <string name="no_pdf_reader">No hay ningún Lector PDF instalado</string>
</resources>
