<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/confirm_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar">

            <ImageView
                android:id="@+id/signatureView"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="148dp"
                android:layout_marginTop="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/confirm_ns"
                tools:srcCompat="@tools:sample/avatars" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/confirmButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/confirm"
                app:backgroundTint="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="@+id/workerSignatureView"
                app:layout_constraintHorizontal_bias="0.56"
                app:layout_constraintStart_toStartOf="@+id/workerSignatureView"
                app:layout_constraintTop_toBottomOf="@+id/workerSignatureView" />

            <ImageView
                android:id="@+id/workerSignatureView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                app:layout_constraintBottom_toBottomOf="@+id/signatureView"
                app:layout_constraintEnd_toEndOf="@+id/confirm_email"
                app:layout_constraintHorizontal_bias="0.53"
                app:layout_constraintStart_toEndOf="@+id/signatureView"
                app:layout_constraintTop_toBottomOf="@+id/confirm_description"
                tools:srcCompat="@tools:sample/avatars" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimary"
                android:onClick="onCancelButton"
                android:text="@string/cancel"
                app:layout_constraintEnd_toEndOf="@+id/signatureView"
                app:layout_constraintHorizontal_bias="0.333"
                app:layout_constraintStart_toStartOf="@+id/signatureView"
                app:layout_constraintTop_toBottomOf="@+id/signatureView" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/user_sign_text"
                app:layout_constraintBottom_toTopOf="@+id/signatureView"
                app:layout_constraintEnd_toEndOf="@+id/signatureView"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/signatureView" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/worker_sign_text"
                app:layout_constraintBottom_toTopOf="@+id/workerSignatureView"
                app:layout_constraintEnd_toEndOf="@+id/workerSignatureView"
                app:layout_constraintHorizontal_bias="0.684"
                app:layout_constraintStart_toStartOf="@+id/workerSignatureView" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirm_type"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="500dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                app:layout_constraintStart_toStartOf="@+id/confirm_nif"
                app:layout_constraintTop_toBottomOf="@+id/confirm_nif">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/confirm_itemType"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirm_brand"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="@+id/confirm_type"
                app:layout_constraintTop_toBottomOf="@+id/confirm_type">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/confirmItemBrando"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirm_ns"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="@+id/confirm_brand"
                app:layout_constraintStart_toStartOf="@+id/confirm_brand"
                app:layout_constraintTop_toBottomOf="@+id/confirm_brand">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/confirm_item_ns"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirm_state"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toEndOf="@+id/confirm_brand"
                app:layout_constraintTop_toBottomOf="@+id/confirm_type">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/confirm_item_state"
                    android:inputType="textMultiLine"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirm_description"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/confirm_state"
                app:layout_constraintStart_toStartOf="@+id/confirm_state"
                app:layout_constraintTop_toTopOf="@+id/confirm_ns">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/confirmDescription"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirm_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/confirm_name"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirm_nif"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="@+id/confirm_name"
                app:layout_constraintStart_toStartOf="@+id/confirm_name"
                app:layout_constraintTop_toBottomOf="@+id/confirm_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/confirm_nif"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirm_phone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/confirm_name"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/confirm_phone"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirm_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="@+id/confirm_phone"
                app:layout_constraintStart_toStartOf="@+id/confirm_phone"
                app:layout_constraintTop_toBottomOf="@+id/confirm_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/confirm_email"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="600dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/confirm_guid">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="IMPORTANTE"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

                <TextView
                    android:id="@+id/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/warning_text" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/lopd_text" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView2"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/pdf_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/date_textview"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:focusable="false"
                android:focusableInTouchMode="false"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="Fecha"
                    android:text="12/10/2020"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_marginStart="64dp"
                android:layout_marginTop="36dp"
                android:src="@drawable/hm_logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView2" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirm_guid"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:focusable="false"
                android:hint="ID"
                app:layout_constraintStart_toStartOf="@+id/date_textview"
                app:layout_constraintTop_toBottomOf="@+id/date_textview">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/guid_view"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:focusable="false"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </HorizontalScrollView>
</ScrollView>
