<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/app_toolbar">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      tools:context=".MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/app_toolbar"
        style="@style/Widget.MaterialComponents.Toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/action_bar_items"
        app:title="@string/app_name"
        app:titleTextColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/stateText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/type_text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_toolbar" />

    <TextView
        android:id="@+id/stateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/state_text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/ns_layout"
        app:layout_constraintStart_toStartOf="@+id/ns_layout"
        app:layout_constraintTop_toBottomOf="@+id/ns_layout" />

    <Spinner
        android:id="@+id/typeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:entries="@array/typeSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stateText2" />

    <Spinner
        android:id="@+id/stateSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:entries="@array/stateSpinner"
        app:layout_constraintEnd_toEndOf="@+id/stateText"
        app:layout_constraintStart_toStartOf="@+id/stateText"
        app:layout_constraintTop_toBottomOf="@+id/stateText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="25dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/state_layout"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/state_layout"
        app:layout_constraintTop_toBottomOf="@+id/state_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/type_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:hint="Tipo y Marca"
        app:layout_constraintEnd_toEndOf="@+id/typeSpinner"
        app:layout_constraintStart_toStartOf="@+id/typeSpinner"
        app:layout_constraintTop_toBottomOf="@+id/typeSpinner">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/type_input"
          android:layout_width="match_parent"
          android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ns_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:hint="Número de Serie (Si es posible): "
        app:layout_constraintEnd_toEndOf="@+id/type_layout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/type_layout"
        app:layout_constraintTop_toBottomOf="@+id/type_layout">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/ns_input"
          android:layout_width="match_parent"
          android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/state_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="@+id/stateSpinner"
        app:layout_constraintStart_toStartOf="@+id/stateSpinner"
        app:layout_constraintTop_toBottomOf="@+id/stateSpinner">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/state_input"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="Descripción del Estado: " />
    </com.google.android.material.textfield.TextInputLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>